--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ELetter">
         <activity
+            android:name=".HalamanLihatSurat"
+            android:exported="false" />
+        <activity
             android:name=".Sign_in_Eletter"
             android:exported="false" />
         <activity
